--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
