--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
